# python-exercies

./: README.md  pyproject.toml
exercises/linked_lists/: add_digits.py  find_kth_last_element.py  is_palindrome.py  linked_list.py  partition_list.py  remove_duplicates.py
tests/linked_lists/: test_add_digits.py  test_find_kth_last_element.py  test_palindrome.py  test_partition.py  test_remove_duplicates.py
